nexus/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nexus
  namespace: nexus
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`nexus.runicrealms.com`)
      kind: Rule
      services:
        - name: nexus-repository-manager
          port: 8081
  tls:
    certResolver: cloudflare
